--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,39 @@
-# Genel Ayarlar
+# General
 .DS_Store
 Thumbs.db
 *.log
 *.tmp
 *.swp
+
 # Node.js
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-# Environment Variables
-# .env
-# .env.*
 
-# Backend (Strapi) Özelleştirmeleri
+# Environment Variables
+.env
+.env.*
+
+# Backend (Strapi)
 backend/.tmp/
 backend/.cache/
 # backend/public/uploads/
 backend/build/
-# backend/.env
 backend/node_modules/
 backend/.backups/
 backend/.env
+
 # Frontend (Next.js)
 frontend/.next/
 frontend/out/
 frontend/node_modules/
+
 # Database
 # db/*.sql
 db/*.sqlite
 db/.env
 
-# Git'e Özel
+# Git
 .git/
 .gitignore
